--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "D:\\Programas\\python.exe"
+    "python.pythonPath": "C:\\Users\\Manuel Fernandez\\AppData\\Local\\Programs\\Python\\Python37-32\\python.exe"
 }
